# sre

./: .clang-format  .gitignore  .gitmodules  Application.cpp  CMakeLists.txt  Doxyfile  Fog.cpp  README.md  RenderTarget.cpp  RenderTarget.h  build.sh  clang-format-all.sh  glad.c  main.cpp  torus.mtl
effects/: __postProcessingDeclFS.glsl  __postProcessingEffectVS.glsl  __postProcessingEndFS.glsl  __postProcessingMainFS.glsl  __postProcessingStartFS.glsl  bloom.glsl  bloomExtractFS.glsl  fog.glsl  fxaa.glsl  gammaCorrection.glsl  gaussianBlurFS.glsl  godRays.glsl  godraysCreateFS.glsl  motionBlur.glsl  passThroughFS.glsl  ssao.glsl  ssaoCreateFS.glsl  ssr.glsl  ssrCreateFS.glsl  textureChannelExtractorFS.glsl
shaders/: FogCalculation.glsl  Light.glsl  PhongLightCalculation.glsl  PointShadowCalculation.glsl  ShadowMappingCalculation.glsl  animatedPhongVS.glsl  bumpedPhongFS.glsl  bumpedPhongVS.glsl  lightFS.glsl  lightVS.glsl  lineFS.glsl  lineVS.glsl  multiTextureLambertFS.glsl  multiTexturePhongFS.glsl  parallaxPhongFS.glsl  parallaxPhongVS.glsl  particleFS.glsl  particleVS.glsl  pbrFS.glsl  phongFS.glsl  phongVS.glsl  pointShadowFS.glsl  pointShadowGS.glsl  pointShadowVS.glsl  propFS.glsl  propGS.glsl  propVS.glsl  shadowMapVS.glsl  skyboxFS.glsl  skyboxVS.glsl  waterFS.glsl  waterVS.glsl
shaders/deferred_rendering/: deferredFS.glsl  deferredVS.glsl  directionalLightFS.glsl  directionalLightVS.glsl  pointLightFS.glsl  pointLightSphereStencilPassVS.glsl  pointLightVS.glsl
shaders/pbr/: PBRLightCalculation.glsl  directionalLightFS.glsl  directionalLightVS.glsl  pointLightFS.glsl  pointLightVS.glsl
src/: Engine.cpp  Engine.h
src/cameras/: CameraComponent.cpp  CameraComponent.h  FreeCameraComponent.cpp  FreeCameraComponent.h
src/components/: Component.cpp  Component.h  HandleList.h
src/debugUtils/: DisplayBoundingBoxComponent.cpp  DisplayBoundingBoxComponent.h  DisplayCameraFrustumComponent.cpp  DisplayCameraFrustumComponent.h  debug.cpp  debug.h
src/events/: EventListener.h  EventListenerCrumb.cpp  EventListenerCrumb.h  EventManager.cpp  EventManager.h
src/gameobject/: GameObject.cpp  GameObject.h  GameObjectEH.cpp  GameObjectEH.h  GameObjectLoader.cpp  GameObjectLoader.h  GameObjectManager.cpp  GameObjectManager.h  Transform.cpp  Transform.h
src/geometry/: BoundingBox.cpp  BoundingBox.h  Frustum.cpp  Frustum.h  Intersections.cpp  Intersections.h  Plane.cpp  Plane.h
src/rendering/: DeferredRenderingFBO.cpp  DeferredRenderingFBO.h  GameObjectRenderer.cpp  GameObjectRenderer.h  Light.cpp  Light.h  RenderPhase.h  RenderSystem.cpp  RenderSystem.h  RenderTarget.cpp  RenderTarget.h  UIRenderer.cpp  UIRenderer.h
src/rendering/deferredRendering/: DeferredLightShader.cpp  DeferredLightShader.h  DeferredRenderingFBO.cpp  DeferredRenderingFBO.h
src/rendering/effects/: Bloom.cpp  Bloom.h  Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  EffectsFBO.cpp  EffectsFBO.h  FXAA.cpp  FXAA.h  Fog.cpp  Fog.h  GammaCorrection.h  (+11 more)
src/resourceManagment/: RefCount.cpp  RefCount.h
src/skeletalAnimation/: Bone.h  SkeletalAnimation.cpp  SkeletalAnimation.h  SkeletalAnimationControllerComponent.cpp  SkeletalAnimationControllerComponent.h  SkeletalAnimationLoader.cpp  SkeletalAnimationLoader.h  SkeletralAnimationControllerComponent.cpp  SkeletralAnimationControllerComponent.h
src/skeletralAnimation/: Bone.h  SkeletralAnimation.cpp  SkeletralAnimation.h  SkeletralAnimationControllerComponent.cpp  SkeletralAnimationControllerComponent.h  SkeletralAnimationLoader.cpp  SkeletralAnimationLoader.h
src/terrain/: GeoMipMappingComponent.cpp  GeoMipMappingComponent.h  HeightMapTerrainHeightProvider.cpp  HeightMapTerrainHeightProvider.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainHeightProvider.cpp  TerrainHeightProvider.h
src/timer/: Timer.cpp  Timer.h
test/: Test.cpp  Test.h  runTest.cpp  runTest.h
test/TextureCache/: textureCache.cpp
test/basic_transparency/: basicTransparency.cpp
test/bloom/: bloomTest.cpp
test/bounding_box/: boundingBoxTest.cpp
test/bump_mapping/: bumpMappingTest.cpp
test/complex_scene/: complexScene.cpp
test/coreSystems/: boundingBoxTest.cpp  meshCreatorTest.cpp  transformLocal.cpp
test/effects/: fogTest.cpp  fxaaTest.cpp  godRaysTest.cpp  ssrTest.cpp
test/fxaa/: fxaaTest.cpp
test/git_demo/: gitDemo.cpp
test/god_rays/: godRaysTest.cpp
test/mesh_creator/: meshCreatorTest.cpp
test/model_loading/: loadHiearchies.cpp
test/multiple_textures/: multipleTextures.cpp
test/multiple_textures_blinn/: multipleTexturesBlinnTest.cpp
test/parallax_mapping/: parallaxMappingTest.cpp
test/particle/: particleTest.cpp
test/pbr/: pbrTest.cpp
test/pbrTest/: pbrTest.cpp
test/pbr_model_loading/: pbrModelLoadingTest.cpp
test/pbr_test/: pbrTest.cpp
test/point_lights_benchmark/: pointLightBenchmarkTest.cpp
test/shadow_mapping/: shadowMappingTest.cpp
test/skeletal_animation/: skeletalAnimationTest.cpp  skeletralAnimationTest.cpp
test/skeletral_animation/: skeletralAnimationTest.cpp
test/skybox/: skybox.cpp
test/ssr/: ssrTest.cpp
test/terrain/: terrain.cpp
test/texture_mesh_cache/: textureMeshCache.cpp
test/transform_local/: transformLocal.cpp
test/water/: waterTest.cpp
test_data/basic_transparency/: suzanne.fbx  transparent.fbx
test_data/bounding_box/: sphere.fbx  spheres.fbx
test_data/bump_mapping/: bumped.fbx  not_bumped.fbx
test_data/model_loading/: car.fbx  hierarchicalTransformations.fbx
test_data/multiple_textures_blinn/: bush.fbx  trees.fbx  trees2.FBX
test_data/parallax_mapping/: no_parallax.fbx  parallax.fbx
test_data/pbr/: sphere.fbx
test_data/shadow_mapping/: cubes.fbx  cubes.mtl  tree.fbx
test_data/skeletal_animation/: BrainStem.gltf  RiggedFigure.gltf  RiggedSimple.gltf
test_data/skeletral_animation/: human.dae  human.fbx  human2.dae  human_animation_2.dae  lamp.fbx  man_woman.dae
test_data/skybox/: back.tga  bottom.tga  front.tga  left.tga  right.tga  top.tga
test_data/ssr/: scene.fbx
test_data/terrain/: tree.fbx
test_data/texture_cache/: table.mtl
utility/: GameObjectEH.natvis
(+98 files in other folders)
